--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         onComplete: function(swaggerApi, swaggerUi){
           if(typeof initOAuth == "function") {
             initOAuth({
-              clientId: ""
-              clientSecret: ""
+              clientId: "",
+              clientSecret: "",
               realm: "your-realms",
               appName: "swagger-ui",
               scopeSeparator: " ",
